# rust-bazel-sample

./: .gitignore  README.md  WORKSPACE
hello_lib/: BUILD.bazel
hello_lib2/: BUILD.bazel
hello_lib3/: BUILD.bazel
hello_lib3/src/: lib.rs
hello_lib3/tests/: greet.rs
hello_world/: BUILD.bazel
