package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library", "rust_test")

rust_library(
    name = "hello_lib3",
    srcs = ["src/lib.rs"],
)

rust_test(
    name = "hello_lib3_test",
    crate = ":hello_lib3",
    # You may add other deps that are specific to the test configuration
    # deps = ["//some/dev/dep"],
)

